@@ -1,3 +1,9 @@
+2009-04-13  Behdad Esfahbod  <behdad@gnome.org>
+
+	* gconf/gconf-client.c (trace): Use g_message for printing trace
+	output, such that G_MESSAGES_PREFIXED=all can be used to print process
+	name and id.
+
 =========================== 2.26.0 ===========================
 
 2009-03-16  Ray Strode  <rstrode@redhat.com>
